@@ -1,4 +1,4 @@
-(use files posix)
+(use files posix lolevel)
 
 (define-syntax assert-error
   (syntax-rules ()
@@ -31,3 +31,15 @@
 (assert-error (process-execute "false\x00123"))
 (assert-error (process-execute "false" '("1" "123\x00456")))
 (assert-error (process-execute "false" '("123\x00456") '("foo\x00bar" "blabla") '("lalala" "qux\x00mooh")))
+
+(let ((tnpfilpn (create-temporary-file)))
+  (let ((tmpfilno (file-open tnpfilpn (+ open/rdwr open/creat)))
+        (data "abcde")
+        (size 5))
+    (file-write tmpfilno data)
+    (let ((mmap (map-file-to-memory #f size prot/read map/file tmpfilno))
+          (str (make-string size)))
+      (assert (memory-mapped-file? mmap))
+      (move-memory! (memory-mapped-file-pointer mmap) str size)
+      (assert (blob=? (string->blob data) (string->blob str)))
+      (unmap-file-from-memory mmap))))
